Monocle 2.0.0 Series NEWS
================================================================================

Version 2.0.0
--------------------------------------------------------------------------------
FEATURES
  o Monocle's algorithm for converting relative expression values (e.g. TPMs)
    into absolute transcript counts, called "Census" has been re-designed. The
    new version is much more accurate. Census is available through the 
    relative2abs() function. The interface to this function has changed, and
    the output values will be quite different from the old version. The main
    change is that the version in 1.99.0 reported cDNA counts, as estimated 
    in each cell's cDNA library. Now, relative2abs reports estimates of mRNA
    counts in the lysate. These are easier to compare with experiments that
    estimate mRNA counts via the use of spike-in controls.
    
  o A new heatmap function plot_pseudotime_heatmap() replaces the old 
    plot_genes_heatmap().
    
  o Lots of new documentation. More to follow in upcoming releases
    
BUGFIXES
  o Ordering cells with DDRTree no longer compresses cells at the tips of
    trajectories.
    
  o Pseudo counts are now applied correctly no matter what the underlying 
    distribution used to model expression is.
    
  o Variance stabilization is applied correctly when a CellDataSet object's
    expressionFamily is negbinomial.size().
    
Version 1.99.0
--------------------------------------------------------------------------------
  o The first public release of the Monocle 2 series. For a summary of 
    new features and changes, please see: 
    http://cole-trapnell-lab.github.io/monocle-release/features/

