@@ -1,7 +1,7 @@
 cth_classifier_cds <- function(cds_subset, cth, curr_node, frequency_thresh) {
   #curr_cell_vertex <-  V(cth@classificationTree)[curr_node]
   next_nodes <- c()
-  print (unique(pData(cds_subset)$Cluster))
+  #print (unique(pData(cds_subset)$Cluster))
   for (child in V(cth@classificationTree) [ suppressWarnings(nei(curr_node, mode="out")) ]){
     
     child_cell_class_func <- V(cth@classificationTree) [ child ]$classify_func[[1]]
@@ -263,6 +263,7 @@ classifyCells <- function(cds, cth, frequency_thresh=NULL, ...) {
 #' @return For a CellDataset with N genes, and a CellTypeHierarchy with k types,
 #' returns a dataframe with N x k rows. Each row contains a gene and a specifity
 #' score for one of the types.
+#' @importFrom reshape2 dcast
 #' @export
 calculateMarkerSpecificity <- function(cds, cth, remove_ambig=TRUE, remove_unknown=TRUE){
   markerSpecificityHelper <- function(cds, cth){
@@ -295,6 +296,7 @@ calculateMarkerSpecificity <- function(cds, cth, remove_ambig=TRUE, remove_unkno
   colnames(marker_specificities) <- colnames(class_df)
   marker_specificities <- melt(marker_specificities)
   colnames(marker_specificities) <- c("gene_id", "CellType", "specificity")
+  marker_specificities$gene_id <- as.character(marker_specificities$gene_id)
   return (marker_specificities)
 }
 
